--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>монголище</title>
   <link rel="stylesheet" href="css/style.css">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500&subset=latin,cyrillic' rel='stylesheet' type='text/css'>  <link rel="stylesheet" type="text/css" href="css/owl.carousel.css">
-	<link rel="stylesheet" type="text/css" href="css/owl.theme.default.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" type="text/css" href="css/jquery.countdown.css">
 </head>
 <body>
@@ -76,7 +77,7 @@
   <h2 class="gallery__title">Галерея</h2>
   <div class="container">
   <div class="row">
-      <div id="owl-example" class="owl-carousel">
+      <div class="owl-carousel owl-theme">
       <div class="item"><img src="img/img-gallery-1.jpg" alt=""></div>
       <div class="item"><img src="img/img-gallery-2.jpg" alt=""></div>
       <div class="item"><img src="img/img-gallery-3.jpg" alt=""></div>
